@@ -245,7 +245,7 @@ span.info a				{color:#2573CD;}
 span.info a:hover		{text-decoration:underline;}
 span.info p				{color:#444; padding:10px 0 0 0;}
 
-ul.faq_list li.on span.list	{background-color:#BEE1FF; padding:5px 10px;}
+ul.faq_list li.on span.list	{background-color:#BEE1FF; padding:5px 10px; display:block;}
 
 a.faq_top				{display:block; position:fixed; right:100px; top:250px; padding:10px 10px 10px 20px; border-radius:0 4px 4px 0; background-color:#DEDEDE; color:#444; font-size:0.9em; font-weight:bold; width:60px; line-height:1.2em;}
 a.faq_top:hover			{background-color:#EBEBEB;}
