@@ -240,6 +240,7 @@
 			<li><a href="#tech13">{faq_technical_q13_text}</a></li>
 			<li><a href="#tech14">{faq_technical_q14_text}</a></li>
 			<li><a href="#tech15">{faq_technical_q15_text}</a></li>
+			<li><a href="#tech16">{faq_technical_q16_text}</a></li>
 		</ul>
 	</div>
 	
@@ -347,6 +348,13 @@
 			<span class="list">{faq_technical_q15_text}</span>
 			<span class="info">
 				{faq_technical_a15_text}
+			</span>
+		</li>
+		<li>
+			<span id="tech16"></span>
+			<span class="list">{faq_technical_q16_text}</span>
+			<span class="info">
+				{faq_technical_a16_text}
 			</span>
 		</li>
 	</ul>
