@@ -785,6 +785,12 @@ Quelles activités intègre-t-on dans les données de 2014 (dans le graphique)?
 #^faq_technical_a15_text
 Une activité qui a en partie eu lieu en 2014, conformément à ses dates de début et de fin.
 
+#^faq_technical_q16_text
+Why are sector aggregations using three-digit codes when five-digit codes are published?
+
+#^faq_technical_a16_text
+Some publishers only produce data with 3 digit codes. We convert the 5 digit codes to 3 digits to unify the data for visualisation on d-portal.
+
 #^faq_explore_q1_text
 Qu’est-ce qu’EXPLORE?
 
