@@ -786,6 +786,12 @@ What counts as 2014 (chart) data?
 #^faq_technical_a15_text
 An activity which includes part of 2014 according to the activity’s start and end dates.
 
+#^faq_technical_q16_text
+Why are sector aggregations using three-digit codes when five-digit codes are published?
+
+#^faq_technical_a16_text
+Some publishers only produce data with 3 digit codes. We convert the 5 digit codes to 3 digits to unify the data for visualisation on d-portal.
+
 #^faq_explore_q1_text
 What is EXPLORE?
 
