@@ -1,3 +1,10 @@
+Static site (2018-12-17 shi)
+==============================
+Added FAQ technical question 16 from Github issue #441
+Updated new question for translations
+Updated css for span.list in FAQ
+
+
 Static site (2018-04-26 shi)
 ==============================
 Update footer text about IATI
